@@ -233,16 +233,10 @@ public class JREUtils {
 
 
         // Garbage collection
-        userArgs.add("-XX:+UseZGC");
-        userArgs.add("-XX:+ZGenerational");
-        userArgs.add("-XX:-ZProactive");
+        userArgs.add("-XX:+UseShenandoahGC");
         userArgs.add("-XX:+UnlockDiagnosticVMOptions");
-        userArgs.add("-XX:-ImplicitNullChecks");
-        userArgs.add("-XX:+DisableExplicitGC");
 
-        // Java should run at max
         userArgs.add("-XX:+UnlockExperimentalVMOptions");
-        userArgs.add("-XX:+UseCriticalJavaThreadPriority");
 
         // Android sig fix
         userArgs.add("-XX:+UseSignalChaining");
@@ -276,8 +270,9 @@ public class JREUtils {
         ConnectivityManager cm = (ConnectivityManager) ctx.getSystemService(Context.CONNECTIVITY_SERVICE);
         Network activeNetwork = cm.getActiveNetwork();
         LinkProperties lp = cm.getLinkProperties(activeNetwork);
-        if(lp == null)
-            return;
+        if(lp == null) {
+            throw new IOException("Link properties are null!");
+        }
 
         List<InetAddress> dnsServers = lp.getDnsServers();
         for (InetAddress dns : dnsServers) {
@@ -323,50 +318,6 @@ public class JREUtils {
                 "-Dsodium.checks.issue2561=false",
                 "-Dorg.sqlite.lib.path=" + ctx.getApplicationInfo().nativeLibraryDir
         ));
-    }
-
-    /**
-     * Parse and separate java arguments in a user friendly fashion
-     * It supports multi line and absence of spaces between arguments
-     * The function also supports auto-removal of improper arguments, although it may miss some.
-     *
-     * @param args The un-parsed argument list.
-     * @return Parsed args as an ArrayList
-     */
-    public static ArrayList<String> parseJavaArguments(String args){
-        ArrayList<String> parsedArguments = new ArrayList<>(0);
-        args = args.trim().replace(" ", "");
-        //For each prefixes, we separate args.
-        for(String prefix : new String[]{"-XX:-","-XX:+", "-XX:","--","-"}){
-            while (true){
-                int start = args.indexOf(prefix);
-                if(start == -1) break;
-                //Get the end of the current argument
-                int end = args.indexOf("-", start + prefix.length());
-                if(end == -1) end = args.length();
-
-                //Extract it
-                String parsedSubString = args.substring(start, end);
-                args = args.replace(parsedSubString, "");
-
-                //Check if two args aren't bundled together by mistake
-                if(parsedSubString.indexOf('=') == parsedSubString.lastIndexOf('=')) {
-                    int arraySize = parsedArguments.size();
-                    if(arraySize > 0){
-                        String lastString = parsedArguments.get(arraySize - 1);
-                        // Looking for list elements
-                        if(lastString.charAt(lastString.length() - 1) == ',' ||
-                                parsedSubString.contains(",")){
-                            parsedArguments.set(arraySize - 1, lastString + parsedSubString);
-                            continue;
-                        }
-                    }
-                    parsedArguments.add(parsedSubString);
-                }
-                else Log.w("JAVA ARGS PARSER", "Removed improper arguments: " + parsedSubString);
-            }
-        }
-        return parsedArguments;
     }
 
     /**
